--- a/lpclApp/templates/contact.html
+++ b/lpclApp/templates/contact.html
@@ -13,7 +13,7 @@
                     <h1 class="mb-4">GET IN TOUCH</h1>
                     <p class="mb-4">Contact our customer help desk and we will be in touch with you shortly.</p>
                     <div>
-                        <img width="200" src="{% static 'img/lead partners ltd lpclimited logo.PNG' %}" alt="lead partners ltd lpclimited logo">
+                        <img width="200" src="{% static 'img/lead_partners_ltd_lpclimited_logo22.png' %}" alt="lead partners ltd lpclimited logo">
                     </div>
                     <p class="text-primary">
                         <h6><i class="fa fa-map-marker" aria-hidden="true"></i>
